@@ -12,6 +12,9 @@ Please describe any modifications that you made to the package in the
 reverse time order.
 
 2015-1-15 David A. Schneider
+- get mask color tool to work with a detector that produces a 2D ndarray for which there is no geometry file
+
+2015-1-15 David A. Schneider
 - Fix bugs when using more than one server in live/offline mode when streams are not specified.
 
 2015-1-15 David A. Schneider
